<resources>
    <string name="app_name">TestApplication</string>
    <string name="facebook_app_id">1748783348706697</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="fb_profile_name">ProfileName</string>
    <string name="fb_profile_birthday">ProfileBirthday</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_button">Maps</string>
    <string name="post_image_image_view_content_description">Post image</string>
    <string name="post_message_text_view">PostMessage</string>
    <string name="post_message_text_view_content_description">Post message text</string>
    <string name="post_created_time_text_view">PostCreatedTime</string>
    <string name="post_created_time_text_view_content_description">Post created time </string>
    <string name="manual_update_button">Manual update</string>
    <string name="main_menu_text_view">Main menu</string>
    <string name="view_posts_button">All posts</string>
    <string name="your_posts">Your posts</string>
    <string name="empty">Is empty</string>
</resources>
