<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_marker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.testapplication.MarkerActivity">


    <TextView
        android:text="@string/post_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/postMessageTextView"
        android:layout_marginTop="46dp"
        android:contentDescription="@string/post_message_text_view_content_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cast_ic_notification_stop_live_stream"
        android:layout_marginTop="25dp"
        android:id="@+id/postImageView"
        android:layout_below="@+id/postMessageTextView"
        android:layout_alignLeft="@+id/postMessageTextView"
        android:layout_alignStart="@+id/postMessageTextView"
        android:contentDescription="@string/post_image_image_view_content_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postImageView"
        android:layout_alignLeft="@+id/postImageView"
        android:layout_alignStart="@+id/postImageView"
        android:layout_marginTop="25dp"
        android:id="@+id/createdTimeTextView"
        android:text="@string/post_created_time_text_view"
        android:contentDescription="@string/post_created_time_text_view_content_description"/>
</RelativeLayout>
