<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bignerdranch.android.testapplication.MenuActivity">

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/fbimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#fff"
        android:padding="2dp"/>

    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/fbimg"
        android:layout_toRightOf="@+id/fbimg"
        android:text="@string/fb_profile_name"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <com.facebook.share.widget.ShareButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileBirthdayTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"/>

    <TextView
        android:id="@+id/profileBirthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fbimg"
        android:layout_alignLeft="@+id/profileNameTextView"
        android:layout_alignStart="@+id/profileNameTextView"
        android:layout_marginBottom="20dp"
        android:text="@string/fb_profile_birthday"/>

    <Button
        android:id="@+id/mapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="mapsButton"
        android:text="@string/google_maps_button"/>

</RelativeLayout>
